# CppTemplate

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  LICENSE  README.md
CMake/: Installation.cmake  SetCompilerFlags.cmake
Include/: Core.hpp
Source/: Main.cpp
include/: Core.hh  Core.hpp
src/: Main.cc  Main.cpp
